--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <h1>Chomsky Digitization Project</h1>
         <h2></h2>
 
+        <a href="https://www.youtube.com/channel/UCvec0zvpmnxdfKh5BZMavRQ">YouTube Channel</a>
+
         <section id="downloads">
           <a href="https://github.com/digitalchomsky" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
